--- a/ms.tex
+++ b/ms.tex
@@ -33,6 +33,17 @@ galaxies: high-redshift}
 
 \section{introduction}
 
+
+\begin{figure}
+\begin{center}
+\centering
+\includegraphics[trim= 0 0 0 0, width=0.48\textwidth]{figures/f_02.eps}
+\centering
+\end{center}
+\caption{ Significance of detection of the central image as a function of the stellar core size. The colors correspond to different slopes of the stellar component. The solid curves correspond to a case without a SMBH while the dashed line show the result of a simulation which includes a $2\times10^8M_{\odot}$ SMBH at its center.
+\label{f:f2}}
+\end{figure}
+
 \section{Conclusion}
 
 \acknowledgements{
