sketching out introduction, #8

--- a/ms.tex
+++ b/ms.tex
@@ -6,6 +6,7 @@
 \usepackage{times}
 \linespread{1.01}
 \usepackage{enumitem}
+\usepackage{framed}
 
 \shortauthors{Y. Hezaveh}
 \begin{document}
@@ -32,7 +33,97 @@ galaxies: high-redshift}
 
 
 \section{introduction}
+\begin{framed}
+Probing the inner 0.5 kpc is interesting because: \\ \\1) SMBHs are there \\2) Various DM models have different predictions \\3) The stellar population profile is contains information about past mergers and BH-stellar population interactions. 
+\\
+\\
+Mapping the matter density and decomposing these different components can thus shed light on various astrophysical phenomena.
+%probing the inner 0.5 kpc of galaxies is interesting. 1) they contain SMBHs and the relationship of the SMBH mass to galaxies is intriguing and interesting. Dark matter models also have different and interesting predictions for the density of the central regions of galaxies (e.g. cored DM, or SIDM predictions). In addition, the history of galaxy mergers and black hole-stellar population interactions can be encoded in the stellar light profiles, resulting in different stellar  
+\end{framed}
 
+\begin{framed}
+Stellar light profiles:
+\\ \\
+1) Massive galaxies often exhibit cored surface brightness profiles.  \\% (Cores sizes of order 50 -- 500 pc).
+2) The most massive ellipticals are thought to form through gas-poor mergers.\\
+
+3) The central structure of a merger without gas is dominated by the more concentrated of the two progenitors: the steeper central density cusp survives. \\
+
+4) Since high-mass ellipticals are thought to be built from mergers of lower-mass ellipticals, which have steep central-density cusps, the cores in more massive ellipticals have to be the result of another (not merger) physical mechanism.  \\
+
+5) The existence of cores thus, represents a challenge to our understanding of the merging process.\\
+
+
+6) ``Black hole scouring''  has been suggested to produce a core.
+\end{framed}
+
+\begin{framed}
+Explain ``Black hole scouring''.  \\
+...\\
+...\\
+...\\
+... whatever the mechanisms are, clear measurements of the central densities can be valuable to solve this puzzle and to shed light on the connection of SMBHs and galaxies. 
+\end{framed}
+
+\begin{framed}
+Strong lensing: \\  \\
+1) lensing is a well-known tool for mapping out mass \\ \\
+2) strong lenses have been used to measure the einstein mass (e.g., X et al.), and the density skopes (Y et al.). \\ \\
+3) Strong lensing formalism, predicts an odd number of images, with a central image that is \emph{demagnified} \\ \\
+4) it has been known that the flux (i.e. demagnification) of the central image is very sensitive to the very inner regions of the density profiles: very peaky, singular density profiles, demagnify the image by very large amounts, whereas cored or shallow profile will result in bright central images. \\ \\
+
+4) typically only an even number of images are observed,  suggesting that the central images are demagnified below the sensitivity of instruments. \\ \\
+
+5) Additionally, another reason for lack of detection is that the central image is located at the center of the lensing galaxy, where i) the sensitivity is lower, due to photon noise of the lens ii) it is difficult to distinguish the flux of the central image from the emission from the lens. iii) if in optical, since they pass through the centers of galaxies there's a high chance of large absorption (in the lens)
+\end{framed}
+
+
+\begin{framed}
+a review of central image observations, claims, and studies:\\ \\
+Winn et al 2004 \\ Rusin et al 2005 \\Inada et al 2005, etc.
+\end{framed}
+
+
+\begin{framed}
+Describe the newly discovered population of mm lenses + ALMA's observations: \\  \\
+1) strong lenses in mm were discovered (SPT, Herschel, etc.) \\ \\
+2) ALMA observations confirmed that they're all lensed and that the sources are at high z \\ \\
+3) because they were selected by flux, + the high sensitivity of ALMA $->$ SNR is very high \\ \\
+4) the sources have many molecular lines. If a central image of a \emph{molecular line} is observed it will be easily identifiable since it corresponds to the redshift of the source, and there will be no confusion that it may be associated with the lens. \\ \\
+5) since these lines are in mm, there's very little (if any) absorption in the lens, so the flux doesn't decrease due to absorption
+\end{framed}
+
+\begin{framed}
+motivation and description of the paper: \\ \\
+1) Long ALMA observations of these molecular lines are likely to be carried out for various reasons (e.g. power spectrum of dark matter, measuring the mass of background black holes) .  \\ \\
+2) In this paper we explore the possibility of detection of these central images in such deep observations, and investigate what we could learn about the innermost regions of galaxies from detection or non-detection of such central images.\\ \\
+3) the paper is organized as: section 2 describes the simulations, section 3 presents the results and discuss them and conclude in section 5 \\ \\
+4) we use $\Lambda$CDM cosmology of XXX
+\end{framed}
+
+\section{Simulations}
+\begin{framed} description
+\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ 
+\end{framed}
+
+
+\section{Results and Discussions}
+%\begin{framed}
+%\end{framed}
+
+%\begin{framed}
+%\end{framed}
+
+%\begin{framed}
+%\end{framed}
+
+%\begin{framed}
+%\end{framed}
+
+
+
+
+\newpage
 
 \begin{figure}
 \begin{center}
