modifying fig 1: model density profile

--- a/ms.tex
+++ b/ms.tex
@@ -153,7 +153,7 @@ We run five simulations in which the background source is embedded in an extende
 \includegraphics[trim= 0 0 5 6, clip, width=0.45\textwidth]{figures/f_01.eps}
 \centering
 \end{center}
-\caption{ illustration of the central image in 2 cases: 
+\caption{ Model density profiles. The black dashed line shows the dark matter component, with a slope of 0.1, consistent with a projected NFW at the innermost regions. the grey dashed curves show cored-sersic five fits to stellar light profiles of massive galaxies from Ferrarese 2006. The red solid curve shows our cored-powerlaw model that we use to approximate this stellar component. The solid black line shows the total matter density (dark plus stellar) of our model. 
 \label{f:f2}}
 \end{figure}
 
