--- a/ms.tex
+++ b/ms.tex
@@ -34,24 +34,17 @@ galaxies: high-redshift}
 
 \section{introduction}
 \begin{framed}
-Probing the inner 0.5 kpc is interesting because: \\ \\1) SMBHs are there \\2) Various DM models have different predictions \\3) The stellar population profile is contains information about past mergers and BH-stellar population interactions. 
-\\
-\\
-Mapping the matter density and decomposing these different components can thus shed light on various astrophysical phenomena.
+Probing the matter distribution in the innermost kpc of galaxies can answer key questions about super massive black holes (SMBH), galaxy formation, and dark matter. It is now established that almost every massive galaxy harbors a SMBH at its center \citep[][]{} with a mass that strongly correlates with the mass of the host galaxy.
+In addition, the distribution of stellar populations in central regions of galaxies contains information about their past merger histories and SMBH-stellar population interactions. \citep{}.  Various dark matter models also predict different structures for the central regions of dark matter halos \citep[e.g][]{rochaetal}.  Mapping the matter density in the central regions of galaxies can therefore shed light on various astrophysical phenomena.
 %probing the inner 0.5 kpc of galaxies is interesting. 1) they contain SMBHs and the relationship of the SMBH mass to galaxies is intriguing and interesting. Dark matter models also have different and interesting predictions for the density of the central regions of galaxies (e.g. cored DM, or SIDM predictions). In addition, the history of galaxy mergers and black hole-stellar population interactions can be encoded in the stellar light profiles, resulting in different stellar  
 \end{framed}
 
 \begin{framed}
-Stellar light profiles:
-\\ \\
-1) Massive galaxies often exhibit cored surface brightness profiles.  \\% (Cores sizes of order 50 -- 500 pc).
-2) The most massive ellipticals are thought to form through gas-poor mergers.\\
-
-3) The central structure of a merger without gas is dominated by the more concentrated of the two progenitors: the steeper central density cusp survives. \\
-
-4) Since high-mass ellipticals are thought to be built from mergers of lower-mass ellipticals, which have steep central-density cusps, the cores in more massive ellipticals have to be the result of another (not merger) physical mechanism.  \\
-
-5) The existence of cores thus, represents a challenge to our understanding of the merging process.\\
+%Stellar light profiles:
+%\\ \\
+Morphological studies of galaxies in optical wavelengths have shown that, unlike their lower-mass counterparts, the most massive elliptical galaxies often exhibit cored stellar light profiles, with core sizes ranging between 50 to 500 pc \citep{e.g.ferrarese06}. 
+These galaxies are thought to form through gas-poor mergers. In such mergers, the central structure of the resulting galaxy is dominated by the inner structure of the more concentrated progenitor.  Since high-mass ellipticals are thought to form from mergers of their lower-mass counterparts, which have steep profiles, the cores in massive ellipticals may result from a different (not merger) physical mechanism.  
+The existence of cores in these galaxies thus represents a challenge to our understanding of the merging process.
 
 
 6) ``Black hole scouring''  has been suggested to produce a core.
@@ -79,8 +72,14 @@ Strong lensing: \\  \\
 
 
 \begin{framed}
-a review of central image observations, claims, and studies:\\ \\
-Winn et al 2004 \\ Rusin et al 2005 \\Inada et al 2005, etc.
+a review of central image observations and studies:\\ \\
+
+1) The individual and statistical properties of central images have been previously studied. (e.g. Wallington 1993, Evans \& Hunter 2002, Keeton 2003, ) \\ \\
+2) to avoid absorption by, and lack of contamination from the main lens, past studies focused on radio lens quasars. \\ \\
+3) for example, Rusin \&  Ma 2001 set constrains on the inner profiles of lens galaxies form observations of six two-image radio-loud lens systems \\ \\
+4) confusion between a central image, and faint radio emission from the lens galaxy, could be avoided by studying the radio spectrum of a candidate central image.   
+5) the only secure detection of a central image (based on its radio spectrum)  in a galaxy-mass lensing system, is PMNJ 1632?0033 (Winn et al. 2002, 2003, 2004),   \\ \\
+6) Winn et al 2004 used the detection of this central image to place constraints on the mass of the central SMBH.
 \end{framed}
 
 
@@ -88,7 +87,8 @@ Winn et al 2004 \\ Rusin et al 2005 \\Inada et al 2005, etc.
 Describe the newly discovered population of mm lenses + ALMA's observations: \\  \\
 1) strong lenses in mm were discovered (SPT, Herschel, etc.) \\ \\
 2) ALMA observations confirmed that they're all lensed and that the sources are at high z \\ \\
-3) because they were selected by flux, + the high sensitivity of ALMA $->$ SNR is very high \\ \\
+3) because they were selected by flux, + the high sensitivity of ALMA $->$ SNR is high \\ \\
+3B) we note that in a 10 hr long observation ALMA can achieve a sensitivity of order 0.0164 mJy in a 500 km/s bandwidth, since the background sources have typical (intrinsic) average line fluxes of order 2-3 mJy, such observations will be able to detect images with magnification as low as $10^{-2}$ \\ \\
 4) the sources have many molecular lines. If a central image of a \emph{molecular line} is observed it will be easily identifiable since it corresponds to the redshift of the source, and there will be no confusion that it may be associated with the lens. \\ \\
 5) since these lines are in mm, there's very little (if any) absorption in the lens, so the flux doesn't decrease due to absorption
 \end{framed}
@@ -140,7 +140,7 @@ We run five simulations in which the background source is embedded in an extende
 5A) we note that for much shallower density profiles, the central image is actually \emph{magnified}, and therefore it's detection should be trivial.\\ \\
 6) the flux is significantly supressed by the central SMBH \\  \\
 7) the dashed curves show the same for a galaxy with a $2e8M_{\odot}$ SMBH. \\ \\
-8) we note that although for some parameter combinations (e.g., $\gamma_{s}=1.2,$ $M_{BH} = 2e8$,$R_{core}<300 pc$ ) there is no chance of detecting the central image, over a significant fraction of allowed parameters the central image could be detected. \\ \\
+8) we note that, as pointed out in Keeton 2003, there's a large range of possibilities for plausible lens parameters: although for some parameter combinations (e.g., $\gamma_{s}=1.2,$ $M_{BH} = 2e8$,$R_{core}<300 pc$ ) there is no chance of detecting the central image, over a significant fraction of allowed parameters the central image could be detected. \\ \\
 9) to calculate this plot we have used a configuration XX, because: it allows us to resolve the central image (if existent), while it is more sensitive that more extended configurations.  In addition, this is the configuration that will be likely used for other projects/sciences.
 \end{framed}
 
@@ -153,7 +153,9 @@ We run five simulations in which the background source is embedded in an extende
 5) we note that the black hole mass is degenerate with the core size: a larger core, results in a brighter image, which can be supressed by a more massive BH. \\ \\
 6) The Fisher data show that the black hole mass cannot be measured with high significance in such observations ($1.16\sigma$) \\ \\
 7) however, interestingly, the degeneracy of the black hole mass and the size of the central core breaks at the high end. and the stellar core is measured with XX $\sigma$\\ \\
-8) this is likely because a very large core results in a fairly extended central images, which could be \emph{resolved} (see Figure 1), in that case, the flux suppression by a crazy massive black hole will result in a distinct dip in the central image  which can be used to distinguish the two. \\ \\
+8) this is likely because a very large core results in a fairly extended central images, which could be \emph{resolved} (see Figure 1), in that case, the flux suppression by a crazy massive black hole will result in a distinct dip in the central image  which can be used to distinguish the two. Rusin  Keeton Winn 2005 %http://adsabs.harvard.edu/abs/2005ApJ...627L..93R
+\\ \\
+
 9) we note that the constraints in this case will be of similar strength to those of Winn 2004. \\ \\ 
 10) in the case of very small core, and a massive black hole (no detection of the image) we only get an upper limits of $\sim$ and $\sim$ for the two. \\ \\
 11) and in case with massive core and massive black hole we measure both with high significance. 
