--- a/ms.tex
+++ b/ms.tex
@@ -33,35 +33,30 @@ galaxies: high-redshift}
 
 
 \section{introduction}
-\begin{framed}
+%\begin{framed}
 Probing the matter distribution in the innermost kpc of galaxies can answer key questions about super massive black holes (SMBH), galaxy formation, and dark matter. It is now established that almost every massive galaxy harbors a SMBH at its center \citep[][]{} with a mass that strongly correlates with the mass of the host galaxy.
 In addition, the distribution of stellar populations in central regions of galaxies contains information about their past merger histories and SMBH-stellar population interactions. \citep{}.  Various dark matter models also predict different structures for the central regions of dark matter halos \citep[e.g][]{rochaetal}.  Mapping the matter density in the central regions of galaxies can therefore shed light on various astrophysical phenomena.
 %probing the inner 0.5 kpc of galaxies is interesting. 1) they contain SMBHs and the relationship of the SMBH mass to galaxies is intriguing and interesting. Dark matter models also have different and interesting predictions for the density of the central regions of galaxies (e.g. cored DM, or SIDM predictions). In addition, the history of galaxy mergers and black hole-stellar population interactions can be encoded in the stellar light profiles, resulting in different stellar  
-\end{framed}
+%\end{framed}
 
-\begin{framed}
+%\begin{framed}
 %Stellar light profiles:
 %\\ \\
-Morphological studies of galaxies in optical wavelengths have shown that, unlike their lower-mass counterparts, the most massive elliptical galaxies often exhibit cored stellar light profiles, with core sizes ranging between 50 to 500 pc \citep{e.g.ferrarese06}. 
-These galaxies are thought to form through gas-poor mergers. In such mergers, the central structure of the resulting galaxy is dominated by the inner structure of the more concentrated progenitor.  Since high-mass ellipticals are thought to form from mergers of their lower-mass counterparts, which have steep profiles, the cores in massive ellipticals may result from a different (not merger) physical mechanism.  
-The existence of cores in these galaxies thus represents a challenge to our understanding of the merging process.
+Morphological studies of galaxies in optical wavelengths have shown that, unlike their lower-mass counterparts, the most massive elliptical galaxies often exhibit cored stellar light profiles, with core sizes ranging from 50 to 500 pc \citep{e.g.ferrarese06}. 
+These galaxies are thought to form through gas-poor mergers. In such mergers, the central structure of the resulting galaxy is dominated by the inner structure of the more concentrated progenitor.  Since high-mass ellipticals are thought to form from mergers of their lower-mass counterparts, with steep profiles, the existence of cores in these galaxies represents a challenge to our understanding of galaxy mergers. Cores in massive ellipticals, therefore, should be the result of different (not merger) mechanisms.  
+``Black hole scouring'' is currently the only known plausible mechanism that could explain core-formation in these galaxies \citep{Thomas2014}.
+%\end{framed}
 
-
-6) ``Black hole scouring''  has been suggested to produce a core.
-\end{framed}
-
-\begin{framed}
-Explain ``Black hole scouring''.  \\
-...\\
-...\\
-...\\
-... whatever the mechanisms are, clear measurements of the central densities can be valuable to solve this puzzle and to shed light on the connection of SMBHs and galaxies. 
-\end{framed}
+%\begin{framed}
+It is thought that during a merger, the SMBHs of the two merging galaxies form a binary which sinks to the center of the potential. The two orbiting SMBH then dissipate angular momentum through three-body interactions with nearby central stars, pushing them to higher orbits and scouring out a core. This angular momentum loss then allows the two black holes to merge. \citep{Begelman et al. 1980}
+Previous studies have shown that the core sizes in these galaxies scales with the mass of their SMBH in agreement with theoretical predictions (Graham 2004; Kormendy \& Bender 2009; Kormendy \& Ho 2013).
+Such measurements, are, however have been limited to low redshifts, since both dynamical measurements to constrain the stellar and SMBH masses, and morphological measurements to constrain core sizes require very high angular resolutions. 
+% ... whatever the mechanisms are, clear measurements of the central densities can be valuable to solve this puzzle and to shed light on the connection of SMBHs and galaxies. 
+%\end{framed}
 
 \begin{framed}
-Strong lensing: \\  \\
-1) lensing is a well-known tool for mapping out mass \\ \\
-2) strong lenses have been used to measure the einstein mass (e.g., X et al.), and the density skopes (Y et al.). \\ \\
+Strong gravitational lensing is a powerful tool for mapping out matter distribution. Among other things, strong lenses have been used to constrain galaxy masses  \citep[e.g.][]{}, density profiles \citep[][]{}, abundance of dark matter subhalos \citep[][]{}, etc. 
+\\ \\
 3) Strong lensing formalism, predicts an odd number of images, with a central image that is \emph{demagnified} \\ \\
 4) it has been known that the flux (i.e. demagnification) of the central image is very sensitive to the very inner regions of the density profiles: very peaky, singular density profiles, demagnify the image by very large amounts, whereas cored or shallow profile will result in bright central images. \\ \\
 
@@ -226,8 +221,6 @@ We run five simulations in which the background source is embedded in an extende
 
 \acknowledgements{
 }
-
-
 
 
 
